--- a/blocks/todo.css
+++ b/blocks/todo.css
@@ -66,8 +66,13 @@
   font-size: 16px;
   line-height: 1.2;
   font-weight: 500;
+
   color: #f44;
   cursor: pointer;
+}
+
+.todo__delete-btn:hover {
+  opacity: 0.7;
 }
 
 .todo__delete-btn::before {
